🎨 Formatar código com novos padrões

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,18 +1,19 @@
 parameters:
-    level: 5
-    phpVersion: 80300
-    checkFunctionNameCase: true
-    checkInternalClassCaseSensitivity: true
-    reportMaybesInPropertyPhpDocTypes: true
-    checkExplicitMixedMissingReturn: true
-    reportMaybesInMethodSignatures: true
-    reportStaticMethodSignatures: true
-    checkTooWideReturnTypesInProtectedAndPublicMethods: true
-    checkDynamicProperties: true
-    reportAlwaysTrueInLastCondition: true
-    paths:
-        - src
-        - tests
-        - config
-        - examples
-    ignoreErrors:
+  level: 5
+  phpVersion: 80300
+  checkFunctionNameCase: true
+  checkInternalClassCaseSensitivity: true
+  reportMaybesInPropertyPhpDocTypes: true
+  checkExplicitMixedMissingReturn: true
+  reportMaybesInMethodSignatures: true
+  reportStaticMethodSignatures: true
+  checkTooWideReturnTypesInProtectedAndPublicMethods: true
+  checkDynamicProperties: true
+  reportAlwaysTrueInLastCondition: true
+  tmpDir: ./cache
+  paths:
+    - src
+    - tests
+    - config
+    - examples
+  ignoreErrors:
